# midi-nizkoteno

./: CMakeLists.txt  README.md  build_all.sh
src/: config.h  main.c
src/leds/: ws2812.pio
src/usb/: usb_descriptors.c
